RAP-5033 fix info icon alignment on phone

--- a/app_storefront_base/cartridge/client/scss/default/components/_common.scss
+++ b/app_storefront_base/cartridge/client/scss/default/components/_common.scss
@@ -76,7 +76,7 @@ header ~ .container a:not(.card-title) {
 }
 
 .form-group .info-icon {
-    margin-left: 0.71rem;
+    margin-left: 0.41rem;
     padding: 0;
 
     &:hover {
